--- a/package.json
+++ b/package.json
@@ -18,13 +18,14 @@
     "babel-preset-react": "^6.24.1",
     "copy-webpack-plugin": "^4.3.1",
     "css-loader": "^0.28.9",
+    "history": "^4.7.2",
     "html-webpack-plugin": "^2.30.1",
     "json-loader": "^0.5.7",
     "nodemon": "^1.14.11",
     "raw-loader": "^0.5.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-router": "^4.2.0",
+    "react-router": "^2.4.0",
     "style-loader": "^0.20.1",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.11.1"
