--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "antd": "^3.1.6",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-plugin-import": "^1.6.3",
@@ -18,22 +19,22 @@
     "babel-preset-react": "^6.24.1",
     "copy-webpack-plugin": "^4.3.1",
     "css-loader": "^0.28.9",
-    "history": "^4.7.2",
+    "history": "^2.0.0",
     "html-webpack-plugin": "^2.30.1",
     "json-loader": "^0.5.7",
     "nodemon": "^1.14.11",
     "raw-loader": "^0.5.1",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-router": "^2.4.0",
+    "react": "^15.4.0",
+    "react-dom": "^15.0.0",
+    "react-router": "^3.0.0",
     "style-loader": "^0.20.1",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.11.1"
   },
   "dependencies": {
     "express": "^4.16.2",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
+    "react": "^15.4.0",
+    "react-dom": "^15.0.0",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2"
   }
